y.output
Terminals unused in grammar

    RESERVED


Grammar

    0 $accept: Program $end

    1 Program: PACKAGE ID SEMICOLON Declarations
    2        | PACKAGE ID SEMICOLON

    3 Declarations: VarDeclaration SEMICOLON
    4             | FuncDeclaration SEMICOLON
    5             | Declarations VarDeclaration SEMICOLON
    6             | Declarations FuncDeclaration SEMICOLON

    7 VarDeclaration: VAR VarSpec
    8               | VAR LPAR VarSpec SEMICOLON RPAR

    9 VarSpec: ID CommaId Type

   10 CommaId: COMMA ID CommaId
   11        | %empty

   12 Type: INT
   13     | FLOAT32
   14     | BOOL
   15     | STRING

   16 FuncDeclaration: FUNC ID LPAR Parameters RPAR Type FuncBody
   17                | FUNC ID LPAR Parameters RPAR FuncBody

   18 Parameters: ID Type CommaIdType
   19           | %empty

   20 CommaIdType: COMMA ID Type CommaIdType
   21            | %empty

   22 FuncBody: LBRACE VarsAndStatements RBRACE

   23 VarsAndStatements: Statement SEMICOLON VarsAndStatements
   24                  | error SEMICOLON VarsAndStatements
   25                  | VarDeclaration SEMICOLON VarsAndStatements
   26                  | SEMICOLON VarsAndStatements
   27                  | %empty

   28 Statement: ID ASSIGN Expr
   29          | LBRACE StatementSemicolon RBRACE
   30          | IF Expr LBRACE StatementSemicolon RBRACE ELSE LBRACE StatementSemicolon RBRACE
   31          | IF Expr LBRACE StatementSemicolon RBRACE
   32          | FOR Expr LBRACE StatementSemicolon RBRACE
   33          | FOR LBRACE StatementSemicolon RBRACE
   34          | RETURN Expr
   35          | RETURN
   36          | FuncInvocation
   37          | ParseArgs
   38          | PRINT LPAR Expr RPAR
   39          | PRINT LPAR STRLIT RPAR
   40          | PRINT LPAR error RPAR

   41 StatementSemicolon: Statement SEMICOLON StatementSemicolon
   42                   | error SEMICOLON StatementSemicolon
   43                   | %empty

   44 ParseArgs: ID COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR
   45          | ID COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR

   46 FuncInvocation: ID LPAR Expr CommaExpr RPAR
   47               | ID LPAR RPAR
   48               | ID LPAR error RPAR

   49 CommaExpr: COMMA Expr CommaExpr
   50          | %empty

   51 Expr: Expr OR Expr
   52     | Expr AND Expr
   53     | Expr LT Expr
   54     | Expr GT Expr
   55     | Expr EQ Expr
   56     | Expr NE Expr
   57     | Expr LE Expr
   58     | Expr GE Expr
   59     | Expr PLUS Expr
   60     | Expr MINUS Expr
   61     | Expr STAR Expr
   62     | Expr DIV Expr
   63     | Expr MOD Expr
   64     | NOT Expr
   65     | MINUS Expr
   66     | PLUS Expr
   67     | INTLIT
   68     | REALLIT
   69     | ID
   70     | FuncInvocation
   71     | LPAR Expr RPAR
   72     | LPAR error RPAR


Terminals, with rules where they appear

    $end (0) 0
    error (256) 24 40 42 45 48 72
    SEMICOLON <token> (258) 1 2 3 4 5 6 8 23 24 25 26 41 42
    COMMA <token> (259) 10 20 44 45 49
    BLANKID <token> (260) 44 45
    ASSIGN <token> (261) 28 44 45
    STAR <token> (262) 61
    DIV <token> (263) 62
    MINUS <token> (264) 60 65
    PLUS <token> (265) 59 66
    MOD <token> (266) 63
    EQ <token> (267) 55
    GT <token> (268) 54
    GE <token> (269) 58
    LE <token> (270) 57
    LT <token> (271) 53
    NE <token> (272) 56
    LBRACE <token> (273) 22 29 30 31 32 33
    LPAR <token> (274) 8 16 17 38 39 40 44 45 46 47 48 71 72
    LSQ <token> (275) 44
    RBRACE <token> (276) 22 29 30 31 32 33
    RPAR <token> (277) 8 16 17 38 39 40 44 45 46 47 48 71 72
    RSQ <token> (278) 44
    NOT <token> (279) 64
    AND <token> (280) 52
    OR <token> (281) 51
    ELSE <token> (282) 30
    IF <token> (283) 30 31
    RETURN <token> (284) 34 35
    FOR <token> (285) 32 33
    FLOAT32 <token> (286) 13
    INT <token> (287) 12
    VAR <token> (288) 7 8
    BOOL <token> (289) 14
    STRING <token> (290) 15
    PARSEINT <token> (291) 44 45
    PRINT <token> (292) 38 39 40
    PACKAGE <token> (293) 1 2
    FUNC <token> (294) 16 17
    CMDARGS <token> (295) 44
    RESERVED <token> (296)
    ID <token> (297) 1 2 9 10 16 17 18 20 28 44 45 46 47 48 69
    STRLIT <token> (298) 39
    INTLIT <token> (299) 67
    REALLIT <token> (300) 68
    UNARY (301)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    Program <ast_node> (48)
        on left: 1 2
        on right: 0
    Declarations <ast_node> (49)
        on left: 3 4 5 6
        on right: 1 5 6
    VarDeclaration <ast_node> (50)
        on left: 7 8
        on right: 3 5 25
    VarSpec <ast_node> (51)
        on left: 9
        on right: 7 8
    CommaId <ast_node> (52)
        on left: 10 11
        on right: 9 10
    Type <ast_node> (53)
        on left: 12 13 14 15
        on right: 9 16 18 20
    FuncDeclaration <ast_node> (54)
        on left: 16 17
        on right: 4 6
    Parameters <ast_node> (55)
        on left: 18 19
        on right: 16 17
    CommaIdType <ast_node> (56)
        on left: 20 21
        on right: 18 20
    FuncBody <ast_node> (57)
        on left: 22
        on right: 16 17
    VarsAndStatements <ast_node> (58)
        on left: 23 24 25 26 27
        on right: 22 23 24 25 26
    Statement <ast_node> (59)
        on left: 28 29 30 31 32 33 34 35 36 37 38 39 40
        on right: 23 41
    StatementSemicolon <ast_node> (60)
        on left: 41 42 43
        on right: 29 30 31 32 33 41 42
    ParseArgs <ast_node> (61)
        on left: 44 45
        on right: 37
    FuncInvocation <ast_node> (62)
        on left: 46 47 48
        on right: 36 70
    CommaExpr <ast_node> (63)
        on left: 49 50
        on right: 46 49
    Expr <ast_node> (64)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
        on right: 28 30 31 32 34 38 44 46 49 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 71


State 0

    0 $accept: . Program $end

    PACKAGE  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: PACKAGE . ID SEMICOLON Declarations
    2        | PACKAGE . ID SEMICOLON

    ID  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: PACKAGE ID . SEMICOLON Declarations
    2        | PACKAGE ID . SEMICOLON

    SEMICOLON  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    1 Program: PACKAGE ID SEMICOLON . Declarations
    2        | PACKAGE ID SEMICOLON .

    VAR   shift, and go to state 6
    FUNC  shift, and go to state 7

    $default  reduce using rule 2 (Program)

    Declarations     go to state 8
    VarDeclaration   go to state 9
    FuncDeclaration  go to state 10


State 6

    7 VarDeclaration: VAR . VarSpec
    8               | VAR . LPAR VarSpec SEMICOLON RPAR

    LPAR  shift, and go to state 11
    ID    shift, and go to state 12

    VarSpec  go to state 13


State 7

   16 FuncDeclaration: FUNC . ID LPAR Parameters RPAR Type FuncBody
   17                | FUNC . ID LPAR Parameters RPAR FuncBody

    ID  shift, and go to state 14


State 8

    1 Program: PACKAGE ID SEMICOLON Declarations .
    5 Declarations: Declarations . VarDeclaration SEMICOLON
    6             | Declarations . FuncDeclaration SEMICOLON

    VAR   shift, and go to state 6
    FUNC  shift, and go to state 7

    $default  reduce using rule 1 (Program)

    VarDeclaration   go to state 15
    FuncDeclaration  go to state 16


State 9

    3 Declarations: VarDeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 17


State 10

    4 Declarations: FuncDeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 18


State 11

    8 VarDeclaration: VAR LPAR . VarSpec SEMICOLON RPAR

    ID  shift, and go to state 12

    VarSpec  go to state 19


State 12

    9 VarSpec: ID . CommaId Type

    COMMA  shift, and go to state 20

    $default  reduce using rule 11 (CommaId)

    CommaId  go to state 21


State 13

    7 VarDeclaration: VAR VarSpec .

    $default  reduce using rule 7 (VarDeclaration)


State 14

   16 FuncDeclaration: FUNC ID . LPAR Parameters RPAR Type FuncBody
   17                | FUNC ID . LPAR Parameters RPAR FuncBody

    LPAR  shift, and go to state 22


State 15

    5 Declarations: Declarations VarDeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 23


State 16

    6 Declarations: Declarations FuncDeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 24


State 17

    3 Declarations: VarDeclaration SEMICOLON .

    $default  reduce using rule 3 (Declarations)


State 18

    4 Declarations: FuncDeclaration SEMICOLON .

    $default  reduce using rule 4 (Declarations)


State 19

    8 VarDeclaration: VAR LPAR VarSpec . SEMICOLON RPAR

    SEMICOLON  shift, and go to state 25


State 20

   10 CommaId: COMMA . ID CommaId

    ID  shift, and go to state 26


State 21

    9 VarSpec: ID CommaId . Type

    FLOAT32  shift, and go to state 27
    INT      shift, and go to state 28
    BOOL     shift, and go to state 29
    STRING   shift, and go to state 30

    Type  go to state 31


State 22

   16 FuncDeclaration: FUNC ID LPAR . Parameters RPAR Type FuncBody
   17                | FUNC ID LPAR . Parameters RPAR FuncBody

    ID  shift, and go to state 32

    $default  reduce using rule 19 (Parameters)

    Parameters  go to state 33


State 23

    5 Declarations: Declarations VarDeclaration SEMICOLON .

    $default  reduce using rule 5 (Declarations)


State 24

    6 Declarations: Declarations FuncDeclaration SEMICOLON .

    $default  reduce using rule 6 (Declarations)


State 25

    8 VarDeclaration: VAR LPAR VarSpec SEMICOLON . RPAR

    RPAR  shift, and go to state 34


State 26

   10 CommaId: COMMA ID . CommaId

    COMMA  shift, and go to state 20

    $default  reduce using rule 11 (CommaId)

    CommaId  go to state 35


State 27

   13 Type: FLOAT32 .

    $default  reduce using rule 13 (Type)


State 28

   12 Type: INT .

    $default  reduce using rule 12 (Type)


State 29

   14 Type: BOOL .

    $default  reduce using rule 14 (Type)


State 30

   15 Type: STRING .

    $default  reduce using rule 15 (Type)


State 31

    9 VarSpec: ID CommaId Type .

    $default  reduce using rule 9 (VarSpec)


State 32

   18 Parameters: ID . Type CommaIdType

    FLOAT32  shift, and go to state 27
    INT      shift, and go to state 28
    BOOL     shift, and go to state 29
    STRING   shift, and go to state 30

    Type  go to state 36


State 33

   16 FuncDeclaration: FUNC ID LPAR Parameters . RPAR Type FuncBody
   17                | FUNC ID LPAR Parameters . RPAR FuncBody

    RPAR  shift, and go to state 37


State 34

    8 VarDeclaration: VAR LPAR VarSpec SEMICOLON RPAR .

    $default  reduce using rule 8 (VarDeclaration)


State 35

   10 CommaId: COMMA ID CommaId .

    $default  reduce using rule 10 (CommaId)


State 36

   18 Parameters: ID Type . CommaIdType

    COMMA  shift, and go to state 38

    $default  reduce using rule 21 (CommaIdType)

    CommaIdType  go to state 39


State 37

   16 FuncDeclaration: FUNC ID LPAR Parameters RPAR . Type FuncBody
   17                | FUNC ID LPAR Parameters RPAR . FuncBody

    LBRACE   shift, and go to state 40
    FLOAT32  shift, and go to state 27
    INT      shift, and go to state 28
    BOOL     shift, and go to state 29
    STRING   shift, and go to state 30

    Type      go to state 41
    FuncBody  go to state 42


State 38

   20 CommaIdType: COMMA . ID Type CommaIdType

    ID  shift, and go to state 43


State 39

   18 Parameters: ID Type CommaIdType .

    $default  reduce using rule 18 (Parameters)


State 40

   22 FuncBody: LBRACE . VarsAndStatements RBRACE

    error      shift, and go to state 44
    SEMICOLON  shift, and go to state 45
    LBRACE     shift, and go to state 46
    IF         shift, and go to state 47
    RETURN     shift, and go to state 48
    FOR        shift, and go to state 49
    VAR        shift, and go to state 6
    PRINT      shift, and go to state 50
    ID         shift, and go to state 51

    RBRACE  reduce using rule 27 (VarsAndStatements)

    VarDeclaration     go to state 52
    VarsAndStatements  go to state 53
    Statement          go to state 54
    ParseArgs          go to state 55
    FuncInvocation     go to state 56


State 41

   16 FuncDeclaration: FUNC ID LPAR Parameters RPAR Type . FuncBody

    LBRACE  shift, and go to state 40

    FuncBody  go to state 57


State 42

   17 FuncDeclaration: FUNC ID LPAR Parameters RPAR FuncBody .

    $default  reduce using rule 17 (FuncDeclaration)


State 43

   20 CommaIdType: COMMA ID . Type CommaIdType

    FLOAT32  shift, and go to state 27
    INT      shift, and go to state 28
    BOOL     shift, and go to state 29
    STRING   shift, and go to state 30

    Type  go to state 58


State 44

   24 VarsAndStatements: error . SEMICOLON VarsAndStatements

    SEMICOLON  shift, and go to state 59


State 45

   26 VarsAndStatements: SEMICOLON . VarsAndStatements

    error      shift, and go to state 44
    SEMICOLON  shift, and go to state 45
    LBRACE     shift, and go to state 46
    IF         shift, and go to state 47
    RETURN     shift, and go to state 48
    FOR        shift, and go to state 49
    VAR        shift, and go to state 6
    PRINT      shift, and go to state 50
    ID         shift, and go to state 51

    RBRACE  reduce using rule 27 (VarsAndStatements)

    VarDeclaration     go to state 52
    VarsAndStatements  go to state 60
    Statement          go to state 54
    ParseArgs          go to state 55
    FuncInvocation     go to state 56


State 46

   29 Statement: LBRACE . StatementSemicolon RBRACE

    error   shift, and go to state 61
    LBRACE  shift, and go to state 46
    IF      shift, and go to state 47
    RETURN  shift, and go to state 48
    FOR     shift, and go to state 49
    PRINT   shift, and go to state 50
    ID      shift, and go to state 51

    RBRACE  reduce using rule 43 (StatementSemicolon)

    Statement           go to state 62
    StatementSemicolon  go to state 63
    ParseArgs           go to state 55
    FuncInvocation      go to state 56


State 47

   30 Statement: IF . Expr LBRACE StatementSemicolon RBRACE ELSE LBRACE StatementSemicolon RBRACE
   31          | IF . Expr LBRACE StatementSemicolon RBRACE

    MINUS    shift, and go to state 64
    PLUS     shift, and go to state 65
    LPAR     shift, and go to state 66
    NOT      shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    FuncInvocation  go to state 71
    Expr            go to state 72


State 48

   34 Statement: RETURN . Expr
   35          | RETURN .

    MINUS    shift, and go to state 64
    PLUS     shift, and go to state 65
    LPAR     shift, and go to state 66
    NOT      shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    $default  reduce using rule 35 (Statement)

    FuncInvocation  go to state 71
    Expr            go to state 73


State 49

   32 Statement: FOR . Expr LBRACE StatementSemicolon RBRACE
   33          | FOR . LBRACE StatementSemicolon RBRACE

    MINUS    shift, and go to state 64
    PLUS     shift, and go to state 65
    LBRACE   shift, and go to state 74
    LPAR     shift, and go to state 66
    NOT      shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    FuncInvocation  go to state 71
    Expr            go to state 75


State 50

   38 Statement: PRINT . LPAR Expr RPAR
   39          | PRINT . LPAR STRLIT RPAR
   40          | PRINT . LPAR error RPAR

    LPAR  shift, and go to state 76


State 51

   28 Statement: ID . ASSIGN Expr
   44 ParseArgs: ID . COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR
   45          | ID . COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR
   46 FuncInvocation: ID . LPAR Expr CommaExpr RPAR
   47               | ID . LPAR RPAR
   48               | ID . LPAR error RPAR

    COMMA   shift, and go to state 77
    ASSIGN  shift, and go to state 78
    LPAR    shift, and go to state 79


State 52

   25 VarsAndStatements: VarDeclaration . SEMICOLON VarsAndStatements

    SEMICOLON  shift, and go to state 80


State 53

   22 FuncBody: LBRACE VarsAndStatements . RBRACE

    RBRACE  shift, and go to state 81


State 54

   23 VarsAndStatements: Statement . SEMICOLON VarsAndStatements

    SEMICOLON  shift, and go to state 82


State 55

   37 Statement: ParseArgs .

    $default  reduce using rule 37 (Statement)


State 56

   36 Statement: FuncInvocation .

    $default  reduce using rule 36 (Statement)


State 57

   16 FuncDeclaration: FUNC ID LPAR Parameters RPAR Type FuncBody .

    $default  reduce using rule 16 (FuncDeclaration)


State 58

   20 CommaIdType: COMMA ID Type . CommaIdType

    COMMA  shift, and go to state 38

    $default  reduce using rule 21 (CommaIdType)

    CommaIdType  go to state 83


State 59

   24 VarsAndStatements: error SEMICOLON . VarsAndStatements

    error      shift, and go to state 44
    SEMICOLON  shift, and go to state 45
    LBRACE     shift, and go to state 46
    IF         shift, and go to state 47
    RETURN     shift, and go to state 48
    FOR        shift, and go to state 49
    VAR        shift, and go to state 6
    PRINT      shift, and go to state 50
    ID         shift, and go to state 51

    RBRACE  reduce using rule 27 (VarsAndStatements)

    VarDeclaration     go to state 52
    VarsAndStatements  go to state 84
    Statement          go to state 54
    ParseArgs          go to state 55
    FuncInvocation     go to state 56


State 60

   26 VarsAndStatements: SEMICOLON VarsAndStatements .

    $default  reduce using rule 26 (VarsAndStatements)


State 61

   42 StatementSemicolon: error . SEMICOLON StatementSemicolon

    SEMICOLON  shift, and go to state 85


State 62

   41 StatementSemicolon: Statement . SEMICOLON StatementSemicolon

    SEMICOLON  shift, and go to state 86


State 63

   29 Statement: LBRACE StatementSemicolon . RBRACE

    RBRACE  shift, and go to state 87


State 64

   65 Expr: MINUS . Expr

    MINUS    shift, and go to state 64
    PLUS     shift, and go to state 65
    LPAR     shift, and go to state 66
    NOT      shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    FuncInvocation  go to state 71
    Expr            go to state 88


State 65

   66 Expr: PLUS . Expr

    MINUS    shift, and go to state 64
    PLUS     shift, and go to state 65
    LPAR     shift, and go to state 66
    NOT      shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    FuncInvocation  go to state 71
    Expr            go to state 89


State 66

   71 Expr: LPAR . Expr RPAR
   72     | LPAR . error RPAR

    error    shift, and go to state 90
    MINUS    shift, and go to state 64
    PLUS     shift, and go to state 65
    LPAR     shift, and go to state 66
    NOT      shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    FuncInvocation  go to state 71
    Expr            go to state 91


State 67

   64 Expr: NOT . Expr

    MINUS    shift, and go to state 64
    PLUS     shift, and go to state 65
    LPAR     shift, and go to state 66
    NOT      shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    FuncInvocation  go to state 71
    Expr            go to state 92


State 68

   46 FuncInvocation: ID . LPAR Expr CommaExpr RPAR
   47               | ID . LPAR RPAR
   48               | ID . LPAR error RPAR
   69 Expr: ID .

    LPAR  shift, and go to state 79

    $default  reduce using rule 69 (Expr)


State 69

   67 Expr: INTLIT .

    $default  reduce using rule 67 (Expr)


State 70

   68 Expr: REALLIT .

    $default  reduce using rule 68 (Expr)


State 71

   70 Expr: FuncInvocation .

    $default  reduce using rule 70 (Expr)


State 72

   30 Statement: IF Expr . LBRACE StatementSemicolon RBRACE ELSE LBRACE StatementSemicolon RBRACE
   31          | IF Expr . LBRACE StatementSemicolon RBRACE
   51 Expr: Expr . OR Expr
   52     | Expr . AND Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . EQ Expr
   56     | Expr . NE Expr
   57     | Expr . LE Expr
   58     | Expr . GE Expr
   59     | Expr . PLUS Expr
   60     | Expr . MINUS Expr
   61     | Expr . STAR Expr
   62     | Expr . DIV Expr
   63     | Expr . MOD Expr

    STAR    shift, and go to state 93
    DIV     shift, and go to state 94
    MINUS   shift, and go to state 95
    PLUS    shift, and go to state 96
    MOD     shift, and go to state 97
    EQ      shift, and go to state 98
    GT      shift, and go to state 99
    GE      shift, and go to state 100
    LE      shift, and go to state 101
    LT      shift, and go to state 102
    NE      shift, and go to state 103
    LBRACE  shift, and go to state 104
    AND     shift, and go to state 105
    OR      shift, and go to state 106


State 73

   34 Statement: RETURN Expr .
   51 Expr: Expr . OR Expr
   52     | Expr . AND Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . EQ Expr
   56     | Expr . NE Expr
   57     | Expr . LE Expr
   58     | Expr . GE Expr
   59     | Expr . PLUS Expr
   60     | Expr . MINUS Expr
   61     | Expr . STAR Expr
   62     | Expr . DIV Expr
   63     | Expr . MOD Expr

    STAR   shift, and go to state 93
    DIV    shift, and go to state 94
    MINUS  shift, and go to state 95
    PLUS   shift, and go to state 96
    MOD    shift, and go to state 97
    EQ     shift, and go to state 98
    GT     shift, and go to state 99
    GE     shift, and go to state 100
    LE     shift, and go to state 101
    LT     shift, and go to state 102
    NE     shift, and go to state 103
    AND    shift, and go to state 105
    OR     shift, and go to state 106

    $default  reduce using rule 34 (Statement)


State 74

   33 Statement: FOR LBRACE . StatementSemicolon RBRACE

    error   shift, and go to state 61
    LBRACE  shift, and go to state 46
    IF      shift, and go to state 47
    RETURN  shift, and go to state 48
    FOR     shift, and go to state 49
    PRINT   shift, and go to state 50
    ID      shift, and go to state 51

    RBRACE  reduce using rule 43 (StatementSemicolon)

    Statement           go to state 62
    StatementSemicolon  go to state 107
    ParseArgs           go to state 55
    FuncInvocation      go to state 56


State 75

   32 Statement: FOR Expr . LBRACE StatementSemicolon RBRACE
   51 Expr: Expr . OR Expr
   52     | Expr . AND Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . EQ Expr
   56     | Expr . NE Expr
   57     | Expr . LE Expr
   58     | Expr . GE Expr
   59     | Expr . PLUS Expr
   60     | Expr . MINUS Expr
   61     | Expr . STAR Expr
   62     | Expr . DIV Expr
   63     | Expr . MOD Expr

    STAR    shift, and go to state 93
    DIV     shift, and go to state 94
    MINUS   shift, and go to state 95
    PLUS    shift, and go to state 96
    MOD     shift, and go to state 97
    EQ      shift, and go to state 98
    GT      shift, and go to state 99
    GE      shift, and go to state 100
    LE      shift, and go to state 101
    LT      shift, and go to state 102
    NE      shift, and go to state 103
    LBRACE  shift, and go to state 108
    AND     shift, and go to state 105
    OR      shift, and go to state 106


State 76

   38 Statement: PRINT LPAR . Expr RPAR
   39          | PRINT LPAR . STRLIT RPAR
   40          | PRINT LPAR . error RPAR

    error    shift, and go to state 109
    MINUS    shift, and go to state 64
    PLUS     shift, and go to state 65
    LPAR     shift, and go to state 66
    NOT      shift, and go to state 67
    ID       shift, and go to state 68
    STRLIT   shift, and go to state 110
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    FuncInvocation  go to state 71
    Expr            go to state 111


State 77

   44 ParseArgs: ID COMMA . BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR
   45          | ID COMMA . BLANKID ASSIGN PARSEINT LPAR error RPAR

    BLANKID  shift, and go to state 112


State 78

   28 Statement: ID ASSIGN . Expr

    MINUS    shift, and go to state 64
    PLUS     shift, and go to state 65
    LPAR     shift, and go to state 66
    NOT      shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    FuncInvocation  go to state 71
    Expr            go to state 113


State 79

   46 FuncInvocation: ID LPAR . Expr CommaExpr RPAR
   47               | ID LPAR . RPAR
   48               | ID LPAR . error RPAR

    error    shift, and go to state 114
    MINUS    shift, and go to state 64
    PLUS     shift, and go to state 65
    LPAR     shift, and go to state 66
    RPAR     shift, and go to state 115
    NOT      shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    FuncInvocation  go to state 71
    Expr            go to state 116


State 80

   25 VarsAndStatements: VarDeclaration SEMICOLON . VarsAndStatements

    error      shift, and go to state 44
    SEMICOLON  shift, and go to state 45
    LBRACE     shift, and go to state 46
    IF         shift, and go to state 47
    RETURN     shift, and go to state 48
    FOR        shift, and go to state 49
    VAR        shift, and go to state 6
    PRINT      shift, and go to state 50
    ID         shift, and go to state 51
